--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,4 +13,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: grey;
 }
